fmcsadmin
(c) 2017-2024 Emic Corporation <https://www.emic.co.jp/>
This software is distributed under the Apache License, Version 2.0, see LICENSE.txt and NOTICE.txt for more information.

Version: 2.3.0-dev (in development)
- Add support for Claris FileMaker Server 2024 (21.1).
- Add support for macOS Sequoia 15.
- Update "GET SERVERPREFS" command to open the databases that were opened when the database server was last shut down for Claris FileMaker Server 2024 (21.1). (Usage: "fmcsadmin get serverprefs OnlyOpenLastOpenedDatabases")
- Built with Go 1.23.
- [INFO] Drop support for Claris FileMaker Server 19.6.
- [INFO] Drop support for macOS Monterey 12.
- [INFO] Drop support for Windows 11 Version 21H2.

Version: 2.2.0
Date: August 28, 2024
- Add support for Claris FileMaker Server 2024 (21.0).
- Add support for Claris FileMaker Server 2023 (20.1, 20.2 and 20.3).
- Add support for Ubuntu 22.04 LTS (on amd64 architecture).
- Add support for Ubuntu 22.04 LTS on arm64 architecture.
- Update "GET SERVERPREFS" command to get blocking new users setting for Claris FileMaker Server 2024 (21.0). (Usage: "fmcsadmin get serverprefs BlockNewUsersEnabled")
- Update "SET SERVERPREFS" command to set blocking new users setting for Claris FileMaker Server 2024 (21.0). (Usage: "fmcsadmin set serverprefs BlockNewUsersEnabled=true")
- Update "SET SERVERPREFS" command to set persistent cache setting for Claris FileMaker Server 2024 (21.0). (Usage: "fmcsadmin set serverprefs PersistCacheEnabled=true")
- Update "SET SERVERPREFS" command to set persistent cache sync setting for Claris FileMaker Server 2024 (21.0). To change the value of SyncPersistCache to true, the value of PersistCacheEnabled must be true. (Usage: "fmcsadmin set serverprefs SyncPersistCache=true")
- Update "GET SERVERPREFS" command to get database server auto restart setting for Claris FileMaker Server 2024 (21.0). (Usage: "fmcsadmin get serverprefs DatabaseServerAutoRestart")